--- a/style.css
+++ b/style.css
@@ -2,17 +2,23 @@ body {
     margin: 0;
     padding: 20px;
     font-family: "Montserrat", sans-serif;
-    background-color: #f7f7f7;
+    background-color: black;
+    /* background: radial-gradient(circle at 10% 20%, rgb(98, 114, 128) 0%, rgb(52, 63, 51) 90.1%); */
+    /* background-color: #f7f7f7; */
 }
 
 .container {
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    padding: 20px;
+    /* background-color: white; */
+    background: linear-gradient(109.6deg, rgb(5, 85, 84) 11.2%, rgb(64, 224, 208) 91.1%);
+    box-shadow: 0px 0px 10px gray;
+    /* box-shadow: 0 4px 8px 0 gray, 0 6px 20px 0 grey; */
+    /* box-shadow: 10px 10px gray; */
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
+    padding-top: 20px;
     max-width: 600px;
     margin: 0 auto;
     border-radius: 5px;
-    margin-top: 50px;
+    margin-top: 170px;
 }
 
 h1 {
@@ -23,6 +29,7 @@ h1 {
 }
 
 .form {
+    /* padding-top: 100px; */
     display: flex;
     flex-direction: column;
     align-items: center;
